...
    </fragment>

    <!-- Settings Screen -->
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.visionfocus.ui.settings.SettingsFragment"
        android:label="Settings"
        tools:layout="@layout/fragment_settings" />

    <!-- History Screen -->
    <fragment
        android:id="@+id/historyFragment"
        android:name="com.visionfocus.ui.history.HistoryFragment"
...
