...
        android:id="@+id/action_voice_commands"
        android:title="@string/menu_voice_commands"
        android:contentDescription="@string/menu_voice_commands_desc"
        app:showAsAction="never" />
    
    <item
        android:id="@+id/action_settings"
        android:title="@string/settings_title"
        android:contentDescription="@string/settings_menu_description"
        android:icon="@android:drawable/ic_menu_preferences"
        app:showAsAction="never" />
    
</menu>
...
